ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Payment__c/IKOPRO_Payment__c.object-meta.xml
<CustomObject>
    <description>Object to manage payments related to membership fees. (junction object relates this one with Contractor Accounts)</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>