ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Payment__c/fields/Due_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Formula__c</fullName>
    <formula>TEXT(Due_Day__c) &amp;  Due_Month_text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Date</label>
    <type>Text</type>
</CustomField>