ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Payment__c/fields/Due_Day_Number__c.field-meta.xml
<CustomField>
    <fullName>Due_Day_Number__c</fullName>
    <formula>VALUE(TEXT( Due_Day__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Day Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>