ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Payment__c/fields/Due_Month_Number__c.field-meta.xml
<CustomField>
    <fullName>Due_Month_Number__c</fullName>
    <formula>VALUE(TEXT( Due_Month__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Month Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>