ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Payment__c/fields/Due_Month_text__c.field-meta.xml
<CustomField>
    <fullName>Due_Month_text__c</fullName>
    <formula>CASE( Due_Month__c ,
&apos;01&apos;, &apos; January&apos;,
&apos;02&apos;, &apos; February&apos;,
&apos;03&apos;, &apos; March&apos;,
&apos;04&apos;, &apos; April&apos;,
&apos;05&apos;, &apos; May&apos;,
&apos;06&apos;, &apos; June&apos;,
&apos;07&apos;, &apos; July&apos;,
&apos;08&apos;, &apos; August&apos;,
&apos;09&apos;, &apos; September&apos;,
&apos;10&apos;, &apos; October&apos;,
&apos;11&apos;, &apos; November&apos;,
&apos;12&apos;, &apos; December&apos;,
&quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due Month</label>
    <type>Text</type>
</CustomField>