ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Payment__c/fields/Tier_Name__c.field-meta.xml
<CustomField>
    <fullName>Tier_Name__c</fullName>
    <description>Tier Name in language of the logged in user (for use in flow - Manage Renewals)</description>
    <formula>CASE( $User.ROOFPRO_Portal_Language__c ,

&quot;English&quot;,
CASE( Tier_Number__c ,
&quot;1&quot;, &quot;ROOFPRO Preferred&quot;,
&quot;2&quot;, &quot;ROOFPRO Select&quot;,
&quot;3&quot;, &quot;ROOFPRO Craftsman Premier&quot;,
&quot;0&quot;, &quot;Advantage&quot;,
&quot;&quot;),

&quot;Quebec French&quot;,
CASE(Tier_Number__c,
&quot;1&quot;, &quot;ROOFPRO Privilège&quot;,
&quot;2&quot;, &quot;ROOFPRO Sélect&quot;,
&quot;3&quot;, &quot;ROOFPRO Maître Artisan&quot;,
&quot;0&quot;, &quot;Avantage&quot;,
&quot;&quot;),

&quot;&quot;)</formula>
    <label>Tier Name</label>
    <type>Text</type>
</CustomField>