ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Payment__c/fields/Tier_Number__c.field-meta.xml
<CustomField>
    <fullName>Tier_Number__c</fullName>
    <formula>TEXT( Tier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier Number</label>
    <type>Text</type>
</CustomField>