ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Payment__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Membership</fullName>
            </value>
            <value>
                <fullName>Microsite</fullName>
            </value>
            <value>
                <fullName>Tier Buy-up</fullName>
                <isActive>false</isActive>
                <label>Tier Buy-up</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>