ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/IKOPRO_Payment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Tier__c</columns>
    <columns>Frequency__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Amount__c</columns>
    <columns>Due_Date_Formula__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>